lab18/03-k8s/22_peerauth_strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: mtls-demo
spec:
  mtls:
    mode: STRICT
