lab18/03-k8s/21_authz_require_mtls_deny_plaintext.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-mtls
  namespace: mtls-demo
spec:
  action: DENY
  rules:
  - from:
    - source:
        notPrincipals: ["*"]
