lab18/03-k8s/30_authz_allow_same_namespace.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: mtls-demo-isolation
  namespace: mtls-demo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["mtls-demo"]
